2001-06-19 Danny Smith <dannysmith@users.sourceforge.net>

	* lib/kernel32.def: Add LanguageGroup and UILanguage symbols.
	Thanks to Kevin Chase <kevincha99@hotmail.com>. 

2001.06.11  TAMURA Kent  <tkent@users.sourceforge.net>

	* objidl.h (IMalloc::ReAlloc()): Correct declaration.
	(IMalloc::Free()): Ditto.

2001-06-11 Danny Smith <dannysmith@users.sourceforge.net>

	* include/shlobj.h (REGSTR_PATH_EXPLORER): Unicode it. 
	(REGSTR_PATH_SPECIAL_FOLDERS): Ditto.
	* include/regstr.h (REGSTR_PATH_EXPLORER): Add #ifndef guard. 

2001-06-11  Mattia Barbon  <mbarbon@dsi.unive.it>

	* include/shlobj.h (struct _browseinfo): UNICODE it.
	(SHBrowseForFolder): Ditto.
	(SHGetPathFromIDList): Ditto.

2001.06.11  Earnie Boyd  <earnie@users.sourceforge.net>

	* include/basetsd.h: RC_INVOKED protection and realignment.
	Thanks to: Colin Peters <colinpeters@users.sourceforge.net>

2001.06.06  Earnie Boyd  <earnie@users.sourceforge.net>

	* Makefile.in (bindist): Reassign value of exec_prefix on make command
	line. 

Tue May 22 18:58:27 2001  Christopher Faylor <cgf@cygnus.com>

	* lib/mapi32.def: Add MAPISendMail.

2001-05-22  Earnie Boyd  <earnie@users.sourceforge.net>

	* include/w32api.h: Update version.
	* Makefile.in: Ditto.

Thu May 17 23:12:00 2001  Corinna Vinschen <corinna@vinschen.de>

	* include/winnt.h: Define SE_GROUP_LOGON_ID as unsigned to avoid
	compiler warnings.

Thu May 17 17:12:00 2001  Corinna Vinschen <corinna@vinschen.de>

	* include/ntdef.h: Protect definition of OBJECT_ATTRIBUTES against
	previous definition in include/ntsecapi.h.
	* include/ntsecapi.h: Vice versa.

Wed May 16 17:59:00 2001  Corinna Vinschen <corinna@vinschen.de>

	* include/winnt.h: Add defines for group attributes.
	Add define for SYSTEM_LUID.
	Add missing types `PTOKEN_DEFAULT_DACL', `PTOKEN_OWNER' and
	`PTOKEN_PRIMARY_GROUP'.

Tue Apr 24 23:51:07 2001  Christopher Faylor <cgf@cygnus.com>

	* lib/Makefile.in: Install libraries in /usr/lib/w32api when building
	for cygwin.
