@@ -27,9 +27,9 @@
  *  DISCLAMED. This includes but is not limited to warranties of
  *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
  *
- * $Revision: 1.2 $
- * $Author: earnie $
- * $Date: 2001-06-05 00:26:30 $
+ * $Revision: 1.3 $
+ * $Author: dannysmith $
+ * $Date: 2001-06-26 02:00:32 $
  *
  */
 
@@ -195,17 +195,21 @@ int *	__fpecode();
 
 /*
  * IEEE recommended functions
+ * Also in math.h.  Keep in sync
  */
+#ifndef __MATH_IEEE
+#define __MATH_IEEE
+double	_chgsign	(double);  /* not ANSI */
+double	_copysign	(double, double); /* C99 */
+double	_logb		(double); /* C99 */
+double	_nextafter	(double, double); /* C99 */
+double	_scalb		(double, long); /* C99 */
 
-double	_chgsign	(double);
-double	_copysign	(double, double);
-double	_logb		(double);
-double	_nextafter	(double, double);
-double	_scalb		(double, long);
+int	_finite		(double); /* C99 */
+int	_fpclass	(double); /* not ANSI: C99 has fpclassify */
+int	_isnan		(double); /* C99 */
+#endif /* __MATH_IEEE */
 
-int	_finite		(double);
-int	_fpclass	(double);
-int	_isnan		(double);
 
 #ifdef	__cplusplus
 }
